# flask-multipass-saml-groups

./: .licenserc.yaml  CONTRIBUTING.md  README.md  generate-src-docs.sh  install-libs.sh  install-packages.sh  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md  test-pre-script.sh
.github/workflows/: create_release.yaml  integration_test.yaml  test.yaml
flask_multipass_saml_groups/: __init__.py  plugin.py  provider.py
flask_multipass_saml_groups/group_provider/: __init__.py  base.py  sql.py
flask_multipass_saml_groups/migrations/: 20230725_1640_ae387f5fc14a_initial_migration.py
flask_multipass_saml_groups/models/: __init__.py  saml_groups.py
src-docs/: group_provider.base.md  group_provider.md  group_provider.sql.md  models.md  provider.md
tests/: common.py
tests/integration/: common.py  conftest.py  test_login.py  test_provider.py  test_session.py
tests/unit/: test_plugin.py  test_provider.py
tests/unit/group_provider/sql/: conftest.py  test_group.py  test_provider.py
