[metadata]
name = Flask-Multipass-SAML-Groups
version = 0.0.1
license = Apache-2.0
author = launchpad.net/~canonical-is-devops
author_email = is-devops-team@canonical.com

[options]
packages = find:
include_package_data = true
python_requires = ~=3.12.2
install_requires =
    flask-multipass[saml]>=0.5.4

[options.package_data]
flask_multipass_saml_groups = migrations/*.py

[options.packages.find]
include =
    flask_multipass_saml_groups
    flask_multipass_saml_groups.*

[options.entry_points]
flask_multipass.identity_providers =
  saml_groups = flask_multipass_saml_groups.provider:SAMLGroupsIdentityProvider
indico.plugins =
    saml_groups = flask_multipass_saml_groups.plugin:SAMLGroupsPlugin
